Fix scm developerConnection.

--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,7 @@
   	<system>github</system>
   </issueManagement>
   <scm>
-  	<developerConnection>andytill</developerConnection>
-  	<connection>https://github.com/andytill/floaty-field</connection>
-  	<url>scm:git:git@github.com/andytill/floaty-field.git</url>
+  	<developerConnection>scm:git:git@github.com/andytill/floaty-field.git</developerConnection>
+  	                <url>scm:git:git@github.com/andytill/floaty-field.git</url>
   </scm>
 </project>
